--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+Actions/Header/CustomerService.php
+.idea/misc.xml
+.idea/.name
+.idea/procons.iml
+.idea/encodings.xml
+.idea/scopes/scope_settings.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
